[gd_scene load_steps=2 format=2]

[ext_resource path="res://chars/enemy/enemyMain.gd" type="Script" id=1]

[node name="enemyMain" type="KinematicBody" groups=[
"enemies",
]]
collision_layer = 16
collision_mask = 95
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1

[node name="playerDetector" type="RayCast" parent="."]
enabled = true
cast_to = Vector3( 0, 0, 0 )
collision_mask = 67

[node name="attackCooldown" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="followTimer" type="Timer" parent="."]

[node name="lastPositionTimer" type="Timer" parent="."]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="lastPositionTimer" to="." method="_on_lastPositionTimer_timeout"]
